--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "webpack -p"
   },
   "dependencies": {
+    "bootstrap": "next",
+    "jquery": "^3.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
